js/js.translator/testData/incremental/invalidation/singleMainFunction/main/l1.0.kt
package A

var mainInA = false
